--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
 	"private": true,
 	"description": "Source code for my collection of music related visualisations and experiments.",
 	"scripts": {
-		"start": "webpack-dev-server"
+		"start": "webpack-dev-server",
+		"build": "webpack",
+		"deploy": "npm run build && gh-pages -d ./dist"
 	},
 	"repository": {
-	  "type": "git",
-	  "url": "https://github.com/moonwave99/music-experiments"
+		"type": "git",
+		"url": "https://github.com/moonwave99/music-experiments"
 	},
 	"keywords": [
 		"music",
 		"svg"
 	],
-	"author": "Diego Caponera <hello@diegocaponera.com>",
+	"author": {
+		"name": "Diego Caponera",
+		"url": "https://www.diegocaponera.com/",
+		"email": "hello@diegocaponera.com"
+	},
 	"license": "ISC",
 	"devDependencies": {
 		"copy-webpack-plugin": "^6.0.2",
 		"css-loader": "^3.5.3",
+		"gh-pages": "^3.1.0",
 		"html-webpack-plugin": "^4.3.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.14.1",
